        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12099
        XMLHttpRequest shouldn't honor a charset specified via setRequestHeader

        Test: http/tests/xmlhttprequest/request-encoding.html

        * xml/xmlhttprequest.cpp:
        (WebCore::XMLHttpRequest::send): Don't try to get the charset from Content-Type. Keep checking
        for unknown charsets, because that will be needed again when we start using document.xmlEncoding.



Canonical link: https://commits.webkit.org/15694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18675 268f45cc-cd09-0410-ab3c-d52691b4dbfc